--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^7.2.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
+    "monaco-editor": "^0.55.1",
     "next": "16.1.1",
     "next-auth": "^5.0.0-beta.30",
     "react": "19.2.3",
