--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -26,6 +26,8 @@ jobs:
       - name: Run Cypress tests
         run: |
           docker compose run --rm test
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
 
       - name: Tear down Docker Compose
         if: always()
