Fix github action

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -18,19 +18,18 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Build and start Docker Compose
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
         run: |
+          echo "Token present? ${GITHUB_TOKEN:0:8}****"
           docker compose up -d --build
-          echo "Waiting for services to be healthy..."
           docker compose ps
           sleep 15
 
-      - name: Check GitHub token
-        run: echo "Token present? ${GITHUB_TOKEN:0:4}****"
+      - name: Run Cypress tests
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
-
-      - name: Run Cypress tests
-        run: docker compose run --rm -e GITHUB_TOKEN=${{ secrets.TOKEN }} test
+        run: docker compose run --rm test
 
       - name: Tear down Docker Compose
         if: always()
