--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "@myriaddreamin/typst-ts-node-compiler": "^0.7.0-rc1",
     "cors": "^2.8.5",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "socket.io": "^4.8.3",
+    "y-socket.io": "^1.1.3",
+    "yjs": "^13.6.29"
   }
 }
